tests/solidity-semantic-tests/out/errors/error_throw_from_module_via_member_access/CContract.approval.teal
#pragma version 10
#pragma typetrack false

// /tmp/multisource_6_lr_vz_/C.sol.CContract.approval_program() -> uint64:
main:
    intcblock 1 0
    pushint 4096
    bzero
    dup
    store 5
    txn ApplicationID
    bnz main_after_if_else@2
    intc_0 // 1
    return

main_after_if_else@2:
    dup
    store 0
    load 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000080
    replace2 64
    store 0
    txn OnCompletion
    !
    assert
    txn ApplicationID
    assert
    pushbytess 0x522de3ce 0xf03d4950 0x8fb0ebb2 // method "error1()void", method "error2()void", method "error3()void"
    txna ApplicationArgs 0
    match error1 error2 error3
    err


// /tmp/multisource_6_lr_vz_/C.sol.CContract.error1[routing]() -> void:
error1:
    txn GroupIndex
    bz error1_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

error1_ternary_merge@4:
    !
    assert // not payable
    err // ErrorB

error1_ternary_false@3:
    intc_1 // 0
    b error1_ternary_merge@4


// /tmp/multisource_6_lr_vz_/C.sol.CContract.error2[routing]() -> void:
error2:
    txn GroupIndex
    bz error2_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

error2_ternary_merge@4:
    !
    assert // not payable
    err // ErrorB

error2_ternary_false@3:
    intc_1 // 0
    b error2_ternary_merge@4


// /tmp/multisource_6_lr_vz_/C.sol.CContract.error3[routing]() -> void:
error3:
    txn GroupIndex
    bz error3_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

error3_ternary_merge@4:
    !
    assert // not payable
    err // ErrorA

error3_ternary_false@3:
    intc_1 // 0
    b error3_ternary_merge@4
